WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113056
[Qt] Fix build with OpenCL 1.2
https://bugs.webkit.org/show_bug.cgi?id=113056
Summary
[Qt] Fix build with OpenCL 1.2
Allan Sandfeld Jensen
Reported
2013-03-22 07:27:00 PDT
We have an experiment compile setting to enable OpenCL for some SVG filters. Unfortunately it uses old build-system style and fails to build due to warning over using deprecated OpenCL 1.1 methods (we escalate warnings to errors).
Attachments
Patch
(4.75 KB, patch)
2013-03-22 07:30 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2013-03-22 07:30:14 PDT
Created
attachment 194538
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2013-03-22 07:31:30 PDT
Comment on
attachment 194538
[details]
Patch Nice
WebKit Review Bot
Comment 3
2013-03-22 08:06:34 PDT
Comment on
attachment 194538
[details]
Patch Clearing flags on attachment: 194538 Committed
r146613
: <
http://trac.webkit.org/changeset/146613
>
WebKit Review Bot
Comment 4
2013-03-22 08:06:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug