[Qt] Fix build with OPENCL 1.2 https://bugs.webkit.org/show_bug.cgi?id=113056

Reviewed by Kenneth Rohde Christiansen.

Switch qmake checks to the modern style which means we can enable OpenCL with
WEBKIT_CONFIG+=opencl.

Upgrade OpenCL 1.1 clCreateImage2D to OpenCL 1.2 clCreateImage calls.

* Target.pri:
* WebCore.pri:
* platform/graphics/filters/FilterEffect.cpp:
(WebCore::FilterEffect::createOpenCLImageResult):
* platform/graphics/gpu/opencl/FilterContextOpenCL.cpp:
(WebCore::FilterContextOpenCL::createOpenCLImage):


Canonical link: https://commits.webkit.org/131390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146613 268f45cc-cd09-0410-ab3c-d52691b4dbfc